--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   },
 
   "discord": {
-    "token": "ODY1MjY3MDc2NTAzMzA2MjQx.GTUYqj.EJSURwrao2yPQ_pxyM5wjcXO1DNpd8zQymuzHU",
-    "channel": "925768752124026911"
+    "token": "Your Token",
+    "channel": "Your Voice IDs"
   }
 }
